--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ spacy==3.7.2
 gunicorn==20.1.0
 python-multipart==0.0.6
 Flask-Cors==3.0.10
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
